Alignment fix for desktop

--- a/src/ShareModules/Layout/Header/Header.scss
+++ b/src/ShareModules/Layout/Header/Header.scss
@@ -284,12 +284,17 @@
     border: none;
   }
 }
-.navbar-brand img {
-  width: 176px;
-  height: 24px;
-  @media (max-width: 500px) {
-    width: 96px;
+.navbar-brand {
+  @media (min-width: 1000px) {
+    margin-right: 15%;
+  }
+  img {
+    width: 176px;
     height: 24px;
+    @media (max-width: 500px) {
+      width: 96px;
+      height: 24px;
+    }
   }
 }
 
